--- a/Fall 19/173A/Quiz 3/quiz3.tex
+++ b/Fall 19/173A/Quiz 3/quiz3.tex
@@ -46,7 +46,7 @@ Math 173A, 3PM
 \\
 %%gives a line of length 2in and 
 %%thickness 0.01in
-{Please justify all your answers}\hfill {July 5, 2019}
+{Please justify all your answers}\hfill {October 17, 2019}
 \\
 {Please also write your full name on the back} 
 
@@ -56,20 +56,15 @@ Math 173A, 3PM
 \begin{enumerate}
 	\item Fill in the blank.
 	\begin{enumerate}
-		\item Given a prime $p$, $g$, $g^a \pmod{p}$ and $g^b\pmod{p}$ for some $g\in \mathbb{F}_p^\times$ and integers $a$ and $b$, the task of finding $g^{ab}\pmod{p}$ is called the \rule{3.5cm}{.15mm} problem.
-
 		\item Given a prime $p$, $g$, and $g^a \pmod{p}$ for some $g\in \mathbb{F}_p^\times$ and integer $a$, the task of finding $a \pmod{p-1}$ is called the \rule{3.5cm}{.15mm} problem.
+
+		\item Fix a prime $p$. An element $g\in \mathbb{F}_p^\times$ whose powers give every element of $\mathbb{F}_p^\times$ is called a \rule{3.5cm}{.155mm} of $\mathbb{F}_p^\times$.
 
 		\item True or false? If $g^a \equiv g^b \pmod{p}$ for some prime $p$, $g\in \mathbb{F}_p^\times$ and integers $a$ and $b$, then $a = b$.
 
-		\item In the ElGamal cryptosystem, Alice chooses a prime $p$ and an element $g\in \mathbb{F}_p^\times$. She then secretly chooses an element $a\in \integers/(p-1)\integers$ and publishes $g^a \pmod{p}$, called her \rule{3.5cm}{.15mm}.
 	\end{enumerate}
 
-	\item Suppose you know that
-	\[
-	3^5 \equiv 44 \pmod{137},\quad 3^{10}\equiv 2 \pmod{137}.
-	\]
-	Find a value of $x$ with $0\leq x \leq 135$ such that $3^x \equiv 11\pmod{137}$. \textit{Hint: this can be done quickly without a calculator.}
+	\item Is $2$ a primitive root modulo 7? How about modulo 13?
 	\vfill
 \end{enumerate}
 
