--- a/Fall 19/270A/HW1/HW1.tex
+++ b/Fall 19/270A/HW1/HW1.tex
@@ -68,7 +68,19 @@
 		\end{solution}
 
 		\item Let $\mcal{F}$ and $\mcal{G}$ be two $\sigma$-algebras of subsets of $\Omega$. Is $\mcal{F}\cup \mcal{G}$ always a $\sigma$-algebra?
+		\begin{solution}
+			The union need not be a $\sigma$-algebra. Let $\Omega = \{1, 2, 3, 4\}$, $\mcal{F} = \{\emptyset, \Omega, \{1\}, \{2, 3, 4\}\}$, and $\mcal{G} = \{\emptyset, \Omega, \{2\}, \{1, 3, 4\}\}$. $\mcal{F}$ and $\mcal{G}$ are $\sigma$-algebras, but the set $\{1\}\cup \{2\} = \{1,2\}$ is not in their union.
+		\end{solution}
 	\end{enumerate}
+
+	\item A subset $A\subset \naturals$ is said to have asymptotic density if
+	\[
+	\lim_{n\to \infty}\frac{|A\cap \{1, \ldots, n\}|}{n}
+	\]
+	exists. Let $\mcal{F}$ be the collection of subsets of $\naturals$ for which the asymptotic density exists. Is $\mcal{F}$ a $\sigma$-algebra?
+	\begin{solution}
+		
+	\end{solution}
 \end{enumerate}
 
 \end{document}
